@@ -71,7 +71,7 @@ void SyLwrpServer::sendGpiState(int slot,const QString &code)
 
   for(unsigned i=0;i<ctrl_client_connections.size();i++) {
     if((conn=ctrl_client_connections.at(i))!=NULL) {
-      if(conn->gpiAdded()) {
+      if(conn->gpiAdded(slot)) {
 	SendCommand(i,QString().sprintf("GPI %d ",slot+1)+code);
       }
     }
@@ -90,7 +90,7 @@ void SyLwrpServer::sendGpoState(int slot,const QString &code)
 
   for(unsigned i=0;i<ctrl_client_connections.size();i++) {
     if((conn=ctrl_client_connections.at(i))!=NULL) {
-      if(conn->gpoAdded()) {
+      if(conn->gpoAdded(slot)) {
 	SendCommand(i,QString().sprintf("GPO %d ",slot+1)+code);
       }
     }
@@ -467,16 +467,37 @@ bool SyLwrpServer::ExecuteCfg(int ch,QStringList &args)
 	if(ok&&(srcnum<32768)) {
 	  ctrl_routing->setGpoAddress(slot,
 		       SyRouting::streamAddress(SyRouting::Stereo,srcnum));
+	  ctrl_routing->setGpoMode(slot,SyRouting::GpoFollowSource);
 	  save=true;
 	}
 	else {
 	  QHostAddress addr(fields[1]);
 	  if(!addr.isNull()) {
 	    ctrl_routing->setGpoAddress(slot,addr);
+	    ctrl_routing->setGpoMode(slot,SyRouting::GpoFollowSource);
 	    save=true;
 	  }
 	  else {
-	    return false;
+	    QStringList f0=fields[1].split("/");
+	    if(f0.size()==2) {
+	      addr.setAddress(f0[0]);
+	      int snake_slot=f0[1].toInt(&ok);
+	      if((!addr.isNull())&&ok) {
+		ctrl_routing->setGpoMode(slot,SyRouting::GpoSnake);
+		ctrl_routing->setGpoAddress(slot,addr);
+		ctrl_routing->setGpoSnakeSlot(slot,snake_slot);
+		save=true;
+	      }
+	      else {
+		return false;
+	      }
+	    }
+	    else {
+	      ctrl_routing->setGpoMode(slot,SyRouting::GpoFollowSource);
+	      ctrl_routing->setGpoAddress(slot,QHostAddress());
+	      ctrl_routing->setGpoSnakeSlot(slot,0);
+	      save=true;
+	    }
 	  }
 	}
       }
@@ -497,29 +518,57 @@ bool SyLwrpServer::ExecuteCfg(int ch,QStringList &args)
 
 bool SyLwrpServer::ExecuteAdd(int ch,QStringList &args)
 {
+  unsigned slot;
+  bool ok=false;
   bool ret=false;
 
+  /*
   if(args.size()!=2) {
     return ret;
   }
+  */
 
   if(args[1]=="GPI") {
-    ctrl_client_connections[ch]->gpiAdd();
-    SendCommand(ch,"BEGIN");
-    for(unsigned i=0;i<ctrl_routing->gpis();i++) {
-      SendCommand(ch,GpiLine(i));
+    if(args.size()==2) {
+      for(unsigned i=0;i<ctrl_routing->gpis();i++) {
+	ctrl_client_connections[ch]->gpiAdd(i);
+      }
+      SendCommand(ch,"BEGIN");
+      for(unsigned i=0;i<ctrl_routing->gpis();i++) {
+	SendCommand(ch,GpiLine(i));
+      }
+      SendCommand(ch,"END");
+      ret=true;
     }
-    SendCommand(ch,"END");
-    ret=true;
+    if(args.size()==3) {
+      slot=args[2].toUInt(&ok)-1;
+      if(ok&&(slot<ctrl_routing->gpis())) {
+	ctrl_client_connections[ch]->gpiAdd(slot);
+	SendCommand(ch,GpiLine(slot));
+	ret=true;
+      }
+    }
   }
   if(args[1]=="GPO") {
-    ctrl_client_connections[ch]->gpoAdd();
-    SendCommand(ch,"BEGIN");
-    for(unsigned i=0;i<ctrl_routing->gpos();i++) {
-      SendCommand(ch,GpoLine(i));
+    if(args.size()==2) {
+      for(unsigned i=0;i<ctrl_routing->gpos();i++) {
+	ctrl_client_connections[ch]->gpoAdd(i);
+      }
+      SendCommand(ch,"BEGIN");
+      for(unsigned i=0;i<ctrl_routing->gpos();i++) {
+	SendCommand(ch,GpoLine(i));
+      }
+      SendCommand(ch,"END");
+      ret=true;
     }
-    SendCommand(ch,"END");
-    ret=true;
+    if(args.size()==3) {
+      slot=args[2].toUInt(&ok)-1;
+      if(ok&&(slot<ctrl_routing->gpos())) {
+	ctrl_client_connections[ch]->gpoAdd(slot);
+	SendCommand(ch,GpoLine(slot));
+	ret=true;
+      }
+    }
   }
 
   return ret;
@@ -528,19 +577,45 @@ bool SyLwrpServer::ExecuteAdd(int ch,QStringList &args)
 
 bool SyLwrpServer::ExecuteDel(int ch,QStringList &args)
 {
+  unsigned slot;
+  bool ok=false;
   bool ret=false;
 
+  /*
   if(args.size()!=2) {
     return ret;
   }
+  */
 
   if(args[1]=="GPI") {
-    ctrl_client_connections[ch]->gpiDel();
-    ret=true;
+    if(args.size()==2) {
+      for(unsigned i=0;i<ctrl_routing->gpis();i++) {
+	ctrl_client_connections[ch]->gpiDel(i);
+      }
+      ret=true;
+    }
+    if(args.size()==3) {
+      slot=args[2].toUInt(&ok)-1;
+      if(ok&&(slot<ctrl_routing->gpis())) {
+	ctrl_client_connections[ch]->gpiDel(slot);
+	ret=true;
+      }
+    }
   }
   if(args[1]=="GPO") {
-    ctrl_client_connections[ch]->gpoDel();
-    ret=true;
+    if(args.size()==2) {
+      for(unsigned i=0;i<ctrl_routing->gpos();i++) {
+	ctrl_client_connections[ch]->gpoDel(i);
+      }
+      ret=true;
+    }
+    if(args.size()==3) {
+      slot=args[2].toUInt(&ok)-1;
+      if(ok&&(slot<ctrl_routing->gpos())) {
+	ctrl_client_connections[ch]->gpoDel(slot);
+	ret=true;
+      }
+    }
   }
 
   return ret;
@@ -607,9 +682,23 @@ QString SyLwrpServer::CfgLine(int slot)
   QString ret=QString().sprintf("CFG GPO %d",slot+1);
 
   ret+=" NAME:\""+ctrl_routing->gpoName(slot)+"\"";
-  if(SyRouting::livewireNumber(ctrl_routing->gpoAddress(slot))!=0) {
-    ret+=QString().sprintf(" SRCA:\"%u\"",
-		    SyRouting::livewireNumber(ctrl_routing->gpoAddress(slot)));
+  bool srca_sent=false;
+  if(ctrl_routing->gpoMode(slot)==SyRouting::GpoFollowSource) {
+    if(SyRouting::livewireNumber(ctrl_routing->gpoAddress(slot))!=0) {
+      ret+=QString().sprintf(" SRCA:\"%u\"",
+			     SyRouting::livewireNumber(ctrl_routing->gpoAddress(slot)));
+      srca_sent=true;
+    }
+  }
+  if(ctrl_routing->gpoMode(slot)==SyRouting::GpoSnake) {
+    if(!ctrl_routing->gpoAddress(slot).isNull()) {
+      ret+=QString(" SRCA:")+ctrl_routing->gpoAddress(slot).toString()+
+	QString().sprintf("/%d",ctrl_routing->gpoSnakeSlot(slot));
+      srca_sent=true;
+    }
+  }
+  if(!srca_sent) {
+    ret+=" SRCA:";
   }
 
   return ret;
